--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -19,6 +19,7 @@ body {
     box-sizing: border-box;
     background-color: var(--cor-primaria);
     color: var(--cor-secundaria);
+    background-image: url("/Fotos/fundo.gif");
 
 
 }
@@ -94,7 +95,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 10px;
-
+    align-items: center;
     border: 1px solid var(--cor-tercearia);
     width: 30%;
     text-align: center;
