--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -27,18 +27,22 @@ body {
 
 .cabecalho__menu {
     display: flex;
-    gap: 80px;
+    align-items: center;
+    justify-content:space-between;
+    gap: 5px;
+    
 
 }
 
 .cabecalho__menu__link {
-    padding: 10px 15px;
+    padding: 10px 10px;
     font-family: var(--fonte-secundaria);
-     font-size: 1.25rem;
+    font-size: 1.25rem;
     font-weight: 600;
     align-items: center;
     color: var(--cor-tercearia);
     text-decoration: none;
+    
 }
 
 .cabecalho__menu__link:hover{
@@ -70,14 +74,18 @@ body {
 }
 
 .apresentacao__textos__titulo {
-    font-size:2.25rem;
+    font-size:1.5rem;
     font-family: var(--fonte-primaria);
+    
+    
+
     
 }
 
 .apresentacao__textos__paragrafo {
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
+    
     
 }
 
@@ -95,11 +103,11 @@ body {
     gap: 10px;
     align-items: center;
     border: 1px solid var(--cor-tercearia);
-    width: 30%;
+    width: 40%;
     text-align: center;
-    border-radius: 12.5rem;
-    font-size: 1.5rem;
-    padding: 1.25rem 0;
+    border-radius: 10rem;
+    font-size: 1rem;
+    padding: 1rem 0;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
@@ -111,13 +119,15 @@ body {
 }
 
 .apresentacao__img {
-    width:40%;
+    width:50%;
 }
 
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 1.25rem;
+    text-align: center;
+    
 }
 
 .redes__config{
@@ -131,15 +141,18 @@ body {
 .rodape {
     padding: 1.25rem;
     background-color: var(--cor-tercearia);
+    height: 40%;
+    width: 100%;
     color: var(--cor-secundaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 400;
+    text-align: center;
 
 }
 
-@media (max-width:1200px){
+@media (max-width:800px){
 
     .cabecalho{
      padding: 10%;
@@ -149,6 +162,13 @@ body {
         justify-content: center;
     }
 
+    .cabecalho__menu__link{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 40px;
+    }
+
     .apresentacao{
         flex-direction: column-reverse;
         align-items: center;
@@ -156,12 +176,28 @@ body {
     
     }
 
+    .apresentacao__img {
+        width:50%;
+    }
+
     .apresentacao__textos {
         width:auto;
     }
 
+    .apresentacao__links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        gap: 25px;
+        padding: 10px;
+        
+    }
+
     .apresentacao__links__link{
-        width: 70%;
+        width: 30%;
+        align-items: center;
+        
     }
 
 }
