--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -27,22 +27,18 @@ body {
 
 .cabecalho__menu {
     display: flex;
-    align-items: center;
-    justify-content:space-between;
-    gap: 5px;
-    
+    gap: 80px;
 
 }
 
 .cabecalho__menu__link {
-    padding: 10px 10px;
+    padding: 10px 15px;
     font-family: var(--fonte-secundaria);
-    font-size: 1.25rem;
+     font-size: 1.25rem;
     font-weight: 600;
     align-items: center;
     color: var(--cor-tercearia);
     text-decoration: none;
-    
 }
 
 .cabecalho__menu__link:hover{
@@ -74,18 +70,14 @@ body {
 }
 
 .apresentacao__textos__titulo {
-    font-size:1.5rem;
+    font-size:2.25rem;
     font-family: var(--fonte-primaria);
-    
-    
-
     
 }
 
 .apresentacao__textos__paragrafo {
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
-    
     
 }
 
@@ -103,11 +95,11 @@ body {
     gap: 10px;
     align-items: center;
     border: 1px solid var(--cor-tercearia);
-    width: 40%;
+    width: 30%;
     text-align: center;
-    border-radius: 10rem;
-    font-size: 1rem;
-    padding: 1rem 0;
+    border-radius: 12.5rem;
+    font-size: 1.5rem;
+    padding: 1.25rem 0;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
@@ -119,15 +111,13 @@ body {
 }
 
 .apresentacao__img {
-    width:50%;
+    width:40%;
 }
 
 .apresentacao__links__subtitulo {
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 1.25rem;
-    text-align: center;
-    
 }
 
 .redes__config{
@@ -141,14 +131,11 @@ body {
 .rodape {
     padding: 1.25rem;
     background-color: var(--cor-tercearia);
-    height: 40%;
-    width: 100%;
     color: var(--cor-secundaria);
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 400;
-    text-align: center;
 
 }
 
@@ -160,13 +147,7 @@ body {
 
     .cabecalho__menu {
         justify-content: center;
-    }
-
-    .cabecalho__menu__link{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 10px 40px;
+        gap: 2px;
     }
 
     .apresentacao{
@@ -176,28 +157,27 @@ body {
     
     }
 
-    .apresentacao__img {
-        width:50%;
+    .apresentacao__textos__titulo {
+        font-size: 25px;
+    }
+
+    .apresentacao__textos__paragrafo{
+        font-size: 19px;
     }
 
     .apresentacao__textos {
         width:auto;
     }
 
-    .apresentacao__links {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        gap: 25px;
-        padding: 10px;
-        
+    .apresentacao__links__subtitulo{
+        text-align: center;
     }
 
     .apresentacao__links__link{
-        width: 30%;
-        align-items: center;
-        
+        width: 70%;
     }
 
+    .rodape{
+        width: 100vw;
+    }
 }
