--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -129,7 +129,7 @@ body {
 }
 
 .rodape {
-    padding: 1rem;
+    padding: 1.25rem;
     background-color: var(--cor-tercearia);
     color: var(--cor-secundaria);
     text-align: center;
@@ -179,6 +179,6 @@ body {
     }
 
     .rodape{
-        width: 100vw;
+        width: calc(100vw - 10px);
     }
 }
