--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -143,6 +143,10 @@ body {
 
     .cabecalho{
      padding: 10%;
+     width: calc(90vw - 10px);
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
     }
 
     .cabecalho__menu {
