--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -154,7 +154,7 @@ body {
     .apresentacao{
         flex-direction: column-reverse;
         align-items: center;
-        padding: 2px;
+        padding: 5%;
         width: 100vw;
         
     }
