--- a/estilos/estilo copy.css
+++ b/estilos/estilo copy.css
@@ -136,6 +136,9 @@ body {
     font-family: var(--fonte-secundaria);
     font-size: 1.25rem;
     font-weight: 400;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 
 }
 
